--- a/package.xml
+++ b/package.xml
@@ -1,47 +1,25 @@
-cmake_minimum_required(VERSION 3.5)
-project(omnibot_motor_driver)
+<?xml version="1.0"?>
+<package format="3">
+  <name>omnibot_motor_driver</name>
+  <version>3.7.60</version>
+  <description>Motor driver for omnibot</description>
+  <license>MIT</license>
+  <maintainer email="vinayvp.98@gmail.com">Vinay Venkanagoud Patil</maintainer>
+  <author email="vinayvp.98@gmail.com">Vinay Venkanagoud Patil</author>
 
-# Default to C++17
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 17)
-endif()
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>rclcpp_components</depend>
+  <depend>rclcpp_action</depend>
+  <depend>diagnostic_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_srvs</depend>
+  <depend>omnibot_msgs</depend>
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
-
-# Find dependencies
-find_package(ament_cmake REQUIRED)
-find_package(dynamixel_sdk REQUIRED)
-find_package(omnibot_msgs REQUIRED)
-find_package(rclcpp REQUIRED)
-
-include_directories(include)
-
-# Build
-add_executable(motor_driver src/motor_driver.cpp)
-ament_target_dependencies(motor_driver
-  omnibot_msgs
-  dynamixel_sdk
-  rclcpp
-)
-
-# Install
-install(TARGETS
-  motor_driver
-  DESTINATION lib/${PROJECT_NAME}
-)
-
-# Test
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
-
-ament_package()
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
+</package>
