Fix CMakeLists.txt, add remaining dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ find_package(omnibot_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
+find_package(diagnostic_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
 
 include_directories(include)
 
@@ -28,6 +31,9 @@ ament_target_dependencies(motor_driver
   std_msgs
   rclcpp
   rclcpp_lifecycle
+  diagnostic_msgs
+  sensor_msgs
+  std_srvs
 )
 
 # Install
